# somax

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
benchmarks/: egn_with_probs.py  fast_egn_example.py  ignd_loss_function.py  nanolm.py  ng_loss_function.py  run_experiments.py  save_embeddings_for_imdb_dataset.py  save_wandb_data_to_db.py  search_hp_sl_clf.py  search_hp_sl_reg.py  sl.py  visualize.py
benchmarks/utils/: data_loader.py  model_zoo.py
examples/: mlp_clf.py  mlp_reg.py  sine_wave.py
somax/: __init__.py  egn.py  gnb.py  hfo.py  ignd.py  ng.py  sgn.py
somax/diagonal/: aurora.py
somax/gn/: egn.py  egn_probs.py  fast_egn.py  gnb.py  ignd.py  lb.py
somax/hf/: newton_cg.py
somax/ng/: swm_ng.py
src/: __init__.py
src/somax/: __init__.py  assembler.py  executor.py  metrics.py  optax.py  planner.py  presets.py  specs.py  types.py  utils.py
src/somax/curvature/: __init__.py  base.py  ggn_ce.py  ggn_mse.py  hessian.py  with_estimators.py
src/somax/damping/: __init__.py  base.py  constant.py  trust_region.py
src/somax/diagonal/: adahessian.py  sophia.py  sophia_g.py  sophia_h.py
src/somax/estimators/: __init__.py  base.py  gnb_ce.py  hutchinson.py
src/somax/gn/: egn.py  ignd.py  sgn.py
src/somax/hf/: newton_cg.py
src/somax/methods/: egn.py  (+7 more)
tests/: conftest.py  helpers.py  test_adahessian.py  test_egn.py  test_hfo.py  test_ignd.py  test_newton_cg.py  test_sgn.py  test_sophia_g.py  test_sophia_h.py  test_sqn.py  test_swm_ng.py  utils.py
tests/api/: test_assembler.py  test_executor.py  test_optax.py  test_planner.py  test_public_api.py  test_utils.py
tests/curvature/: test_ggn_ce.py  test_ggn_mse.py  test_hessian.py  test_with_estimators.py
tests/damping/: test_constant.py  test_trust_region.py
tests/estimators/: test_gnb_ce.py  test_hutchinson.py
tests/methods/: test_adahessian.py  test_egn.py  test_newton_cg.py  test_sgn.py  test_sophia_g.py  test_sophia_h.py
tests/preconditioners/: test_diag_direct.py  test_diag_ema.py  test_identity_precond.py
tests/solvers/: test_cg.py  test_direct.py  test_identity_solver.py  test_row_cg.py  test_row_cholesky.py
(+15 files in other folders)
