[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "somax"
version = "1.0.0"
description = "Composable Second-Order Optimization for JAX and Optax."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Nick Korbit" }
]
dependencies = [
    "jax>=0.4.20",
    "optax>=0.1.7",
    "flax>=0.7.5",
    "chex>=0.1.8",
    "numpy>=1.23",
]
keywords = [
    "jax",
    "optax",
    "optimization",
    "second-order",
    "gauss-newton",
    "hessian",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/cor3bit/somax"
Repository = "https://github.com/cor3bit/somax"
Issues = "https://github.com/cor3bit/somax/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=5",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "pyright>=1.1",
    "pre-commit>=3",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
xfail_strict = true